<resources>
    <string name="app_name">Companies Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_new_company">Add new company</string>
    <string name="item_delete_all">Delete All</string>
    <string name="item_exit">Exit</string>
    <string name="text_name">Company Name:</string>
    <string name="text_address">Company Address:</string>
    <string name="text_image">Company Image:</string>
    <string name="edit_name">Please insert the company name...</string>
    <string name="edit_address">Please insert the company address...</string>
    <string name="edit_image">Please insert the company image url...</string>
    <string name="button_back">Back</string>
    <string name="button_save">Save</string>
    <string name="sp_company">company</string>
    <string name="sp_is_deleted">isDeleted</string>
    <string name="sp_first_run">isFirsRun</string>
</resources>
